--- a/app/app.json
+++ b/app/app.json
@@ -13,13 +13,15 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.alexlop29.app"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.alexlop29.app"
     },
     "web": {
       "bundler": "metro",
@@ -27,11 +29,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      "react-native-auth0",
-      {
-        "domain": "dev-xxn2763opsyx3347.us.auth0.com"
-      }
+      "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
